--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Product List</title>
+
 </head>
 <body>
 <h1>Product List</h1>
@@ -12,6 +13,7 @@
         <th>Name</th>
         <th>Price</th>
         <th>ImageUrl</th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody>
