dto삭제 후 product안에 List형식으로 option구현

--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -13,7 +13,7 @@
         <th>Name</th>
         <th>Price</th>
         <th>ImageUrl</th>
-        <th>Actions</th>
+        <th>Options</th>
     </tr>
     </thead>
     <tbody>
@@ -22,6 +22,7 @@
         <td th:text="${product.name}"></td>
         <td th:text="${product.price}"></td>
         <td th:text="${product.imageUrl}"></td>
+        <td th:text="${product.options}"></td>
     </tr>
     </tbody>
 </table>
