--- a/src/main/resources/templates/admin/add.html
+++ b/src/main/resources/templates/admin/add.html
@@ -20,6 +20,9 @@
         <label for="imageUrl">ImageUrl:</label>
         <input type="text" id="imageUrl" name="imageUrl" required>
         <br>
+        <label for="options">ImageUrl:</label>
+        <input type="text" id="options" name="options" required>
+        <br>
         <button type="submit">Add Product</button>
     </form>
 </body>
