--- a/src/main/resources/templates/admin/modify.html
+++ b/src/main/resources/templates/admin/modify.html
@@ -21,6 +21,9 @@
     <label for="imageUrl">ImageUrl:</label>
     <input type="text" id="imageUrl" name="imageUrl" required>
     <br>
+    <label for="options">ImageUrl:</label>
+    <input type="text" id="options" name="options" required>
+    <br>
     <button type="submit">Update Product</button>
   </form>
 
