--- a/src/main/resources/templates/Add_product.html
+++ b/src/main/resources/templates/Add_product.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>상품 추가</title>
+  <link rel="stylesheet" th:href="@{/css/Add_Edit_product.css}">
 </head>
 <body>
-$END$
+<h1>상품 추가</h1>
+<form th:action="@{/admin/products}" th:object="${product}" method="post">
+  <div>
+    <label for="name">Id:</label>
+    <input type="text" id="id" th:field="*{id}" required />
+  </div>
+  <div>
+    <label for="name">Name:</label>
+    <input type="text" id="name" th:field="*{name}" required />
+  </div>
+  <div>
+    <label for="price">Price:</label>
+    <input type="number" id="price" th:field="*{price}" required />
+  </div>
+  <div>
+    <label for="imageUrl">Image URL:</label>
+    <input type="text" id="imageUrl" th:field="*{imageUrl}" required />
+  </div>
+  <div>
+    <button type="submit">Add Product</button>
+  </div>
+</form>
 </body>
 </html>
