--- a/src/main/resources/templates/Edit_product.html
+++ b/src/main/resources/templates/Edit_product.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Edit Product</title>
+  <link rel="stylesheet" th:href="@{/css/Add_Edit_product.css}">
 </head>
 <body>
-$END$
+<h1>Edit Product</h1>
+<form th:action="@{/admin/products/update/{id}(id=${product.id})}" th:object="${product}" method="post">
+<!--  무결성 문제로 인해 id는 수정 불가능하게 설정-->
+  <div>
+    <label for="name">Name:</label>
+    <input type="text" id="name" th:field="*{name}" required />
+  </div>
+  <div>
+    <label for="price">Price:</label>
+    <input type="number" id="price" th:field="*{price}" required />
+  </div>
+  <div>
+    <label for="imageUrl">Image URL:</label>
+    <input type="text" id="imageUrl" th:field="*{imageUrl}" required />
+  </div>
+  <div>
+    <button type="submit">Update Product</button>
+  </div>
+</form>
 </body>
 </html>
