--- a/src/main/resources/templates/Products.html
+++ b/src/main/resources/templates/Products.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>상품 목록</title>
+  <link rel="stylesheet" th:href="@{/css/Products.css}">
 </head>
 <body>
-$END$
+<h1>상품 목록</h1>
+<div>
+  <a href="/admin/products/add" id="add">상품 추가</a>
+</div>
+<table>
+  <thead>
+  <tr>
+    <th>ID</th>
+    <th>Name</th>
+    <th>Price</th>
+    <th>Url</th>
+    <th>Actions</th>
+
+  </tr>
+  </thead>
+  <tbody>
+  <tr th:each="product : ${products}">
+    <td th:text="${product.id}"></td>
+    <td th:text="${product.name}"></td>
+    <td th:text="${product.price}"></td>
+    <td th:text="${product.ImageUrl}"></td>
+    <td>
+      <a th:href="@{/admin/products/edit/{id}(id=${product.id})}">수정</a> |
+      <a th:href="@{/admin/products/delete/{id}(id=${product.id})}">삭제</a>
+    </td>
+  </tr>
+  </tbody>
+</table>
 </body>
 </html>
