feat: 입력 폼 수정

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -25,7 +25,7 @@
         </tr>
         </tbody>
     </table>
-    <button src="">선물 등록하기</button>
+    <a th:href="@{/admin/create}" class="btn btn-primary">상품 등록</a>
 </div>
 </body>
 </html>
