--- a/src/main/resources/templates/createForm.html
+++ b/src/main/resources/templates/createForm.html
@@ -4,6 +4,24 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
-<p>입력 폼</p>
+<div class = "container">
+    <h5 class="my-3 border-bottom pb-2">상품등록</h5>
+    <form th:action="@{/admin/create}" method="post">
+        <div class="mb-3">
+            <label for="name" class="form-label">상품명</label>
+            <input type="text" name="name" id="name" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="price" class="form-label">가격</label>
+            <textarea name="price" id="price" class="form-control" ></textarea>
+        </div>
+        <div class="mb-3">
+            <label for="imageUrl" class="form-label">이미지Url</label>
+            <textarea name="imageUrl" id="imageUrl" class="form-control"></textarea>
+        </div>
+        <input type="submit" value="저장하기" class="btn btn-primary my-2">
+    </form>
+</div>
+
 </body>
 </html>
