--- a/src/main/resources/templates/Add_product.html
+++ b/src/main/resources/templates/Add_product.html
@@ -24,7 +24,7 @@
     <input type="text" id="imageUrl" th:field="*{imageUrl}" required />
   </div>
   <div>
-    <button type="submit">Add Product</button>
+    <button type="submit">추가하기</button>
   </div>
 </form>
 </body>
