--- a/src/main/resources/templates/modify_form.html
+++ b/src/main/resources/templates/modify_form.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Create Form</title>
+    <title>Modify Form</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
 <div class = "container">
-
-        <h5 class="my-3 border-bottom pb-2">상품등록</h5>
-        <form th:action="@{/admin/create}" method="post">
+    <div th:text="${gift.name}"></div>
+    <h5 class="my-3 border-bottom pb-2">상품수정</h5>
+    <form th:action="@{|/admin/modify/${gift.id}|}" method="post">
         <div class="mb-3">
             <label for="name" class="form-label">상품명</label>
             <input type="text" name="name" id="name" class="form-control">
@@ -21,7 +21,7 @@
             <label for="imageUrl" class="form-label">이미지Url</label>
             <textarea name="imageUrl" id="imageUrl" class="form-control"></textarea>
         </div>
-        <input type="submit" value="저장하기" class="btn btn-primary my-2">
+        <input type="submit" value="수정하기" class="btn btn-primary my-2">
     </form>
 </div>
 
