--- a/src/main/resources/templates/gift_detail.html
+++ b/src/main/resources/templates/gift_detail.html
@@ -10,5 +10,10 @@
 이미지 : <div th:text="${gift.imageUrl}"></div>
 
 <a th:href="@{|/admin/modify/${gift.id}|}" class="btn btn-primary">상품 수정</a>
+<form th:action="@{|/admin/delete/${gift.id}|}" method="post">
+    <input type="submit" value="상품 삭제" class="btn btn-primary my-2">
+</form>
+<a th:href="@{/admin}" class="btn btn-primary">메인으로</a>
+
 </body>
 </html>
