--- a/src/main/resources/templates/addForm.html
+++ b/src/main/resources/templates/addForm.html
@@ -7,7 +7,7 @@
 <body>
 <h1>상품 저장</h1>
 
-<form th:action="@{/api/products/new}" method="post">
+<form th:action="@{/products/new}" method="post">
     <div>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name">
