--- a/src/main/resources/templates/editForm.html
+++ b/src/main/resources/templates/editForm.html
@@ -7,7 +7,7 @@
 <body>
 <h1>상품 수정</h1>
 
-<form th:action="@{/api/products/{id}/edit(id=${productDto.id()})}" method="post">
+<form th:action="@{/products/{id}/edit(id=${productDto.id()})}" method="post">
     <input type="hidden" th:name="id" th:value="${productDto.id}" />
     <div>
         <label for="name">Name:</label>
