feat: products-form.html 추가

--- a/src/main/resources/templates/products-list.html
+++ b/src/main/resources/templates/products-list.html
@@ -28,6 +28,6 @@
             </tr>
         </tbody>
     </table>
-    <a href="/product/add">새 상품 추가</a>
+    <a href="/products/add">새 상품 추가</a>
 </body>
 </html>
