--- a/src/main/resources/templates/products-list.html
+++ b/src/main/resources/templates/products-list.html
@@ -16,7 +16,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr th:each="상품목록: ${products}">
+            <tr th:each="product: ${products}">
                 <td th:text="${product.id}"></td>
                 <td th:text="${product.name}"></td>
                 <td th:text="${product.price}"></td>
