--- a/src/main/resources/templates/products-form.html
+++ b/src/main/resources/templates/products-form.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" >
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>상품 추가</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<h1>상품 추가</h1>
-    <form th:action="@{/products/add}" th:object="${product}" method="post">
-        <p th:if="${error}" th:text="${error}"></p>
-        <div>
-            <label>Id: </label>
-            <input type="text" th:field="*{id}"/>
+<div class="container">
+    <h1 class="mt-5">상품 추가</h1>
+    <form th:action="@{/products/add}" th:object="${product}" method="post" class="mt-3">
+        <div th:if="${error}" class="alert alert-danger" th:text="${error}"></div>
+        <div class="form-group">
+            <label for="id">Id: </label>
+            <input type="text" class="form-control" id="id" th:field="*{id}" />
         </div>
-        <div>
-            <label>Name: </label>
-            <input type="text" th:field="*{name}"/>
+        <div class="form-group">
+            <label for="name">Name: </label>
+            <input type="text" class="form-control" id="name" th:field="*{name}" />
         </div>
-        <div>
-            <label>Price: </label>
-            <input type="text" th:field="*{price}"/>
+        <div class="form-group">
+            <label for="price">Price: </label>
+            <input type="text" class="form-control" id="price" th:field="*{price}" />
         </div>
-        <div>
-            <label>ImageUrl: </label>
-            <input type="text" th:field="*{imageUrl}"/>
+        <div class="form-group">
+            <label for="imageUrl">ImageUrl: </label>
+            <input type="text" class="form-control" id="imageUrl" th:field="*{imageUrl}" />
         </div>
-        <div>
-            <button type="submit">상품 추가</button>
-        </div>
+        <button type="submit" class="btn btn-primary">상품 추가</button>
     </form>
-<a href="/products">상품 목록</a>
+    <a href="/products" class="btn btn-secondary mt-3">상품 목록</a>
+</div>
 </body>
 </html>
