--- a/src/main/resources/templates/update-product.html
+++ b/src/main/resources/templates/update-product.html
@@ -12,7 +12,7 @@
         <div th:if="${error}" class="alert alert-danger" th:text="${error}"></div>
         <div class="form-group">
             <label for="id">Id: </label>
-            <input type="text" class="form-control" id="id" th:field="*{id}" readonly />
+            <input type="text" class="form-control" id="id" th:field="*{id}"  />
         </div>
         <div class="form-group">
             <label for="name">Name: </label>
