fix(list): 상품마다 수정, 삭제 버튼 추가

--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -20,6 +20,10 @@
         <td th:text="${product.name}"></td>
         <td th:text="${product.price}"></td>
         <td th:text="${product.imageUrl}"></td>
+        <td>
+            <a th:href="@{/products/edit/{id}(id=${product.id})}">수정</a>
+            <a th:href="@{/products/delete/{id}(id=${product.id})}">삭제</a>
+        </td>
     </tr>
     </tbody>
 </table>
