Feat: 상품 조회 표 생성 및 기능 구현
이후 수정과 삭제를 고려하여 수정 버튼, 저장 버튼, 삭제 버튼을 생성했다.
이 또한 상품 생성과 마찬가지로 fetch api를 활용하여 api에 요청하여
결과를 처리했다.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,6 +33,21 @@
             <button class="btn btn-primary" type="button" onclick="createProducts()">상품 생성</button>
         </form>
 
+        <h2>모든 상품 조회</h2>
+        <table class="table table-bordered" id="productsTable">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Image Url</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody id="productsTableBody">
+            </tbody>
+        </table>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
                 crossorigin="anonymous"></script>
