feat: 상품 삭제 버튼 구현

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -85,6 +85,14 @@
             fetchProducts();
         });
     }
+
+    function deleteProduct(id) {
+        fetch(`/products/${id}`, {
+            method: 'DELETE'
+        }).then(response => {
+            fetchProducts()
+        });
+    }
 </script>
 </body>
 </html>
