--- a/src/main/resources/templates/version-SSR/index.html
+++ b/src/main/resources/templates/version-SSR/index.html
@@ -40,10 +40,11 @@
                         <!-- 삭제 폼 -->
                         <button type="button" id="deleteButton" th:onclick="'submitForm(\'' + ${product.id} + '\')'">삭제</button>
 
-                        <form th:action="@{/edit}" method="get" style="display:inline;">
-                            <input type="hidden" th:value="${product.id}" name="productId"/>
-                            <button id="editButton" type="submit">수정</button>
-                        </form>
+                        <a th:href="@{/edit/{id}(id=${product.id})}"><button type="button" id="editButton">수정</button></a>
+<!--                        <form th:action="@{/edit}" method="get" style="display:inline;">-->
+<!--                            <input type="hidden" th:value="${product.id}" name="productId"/>-->
+<!--                            <button id="editButton" type="submit">수정</button>-->
+<!--                        </form>-->
                     </td>
                     <td th:text="${product.id}">id</td>
                     <td th:text="${product.name}">name</td>
