feat : products.html 추가

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta charset="UTF-8">
     <title>step2-관리자화면</title>
     <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
