--- a/src/main/resources/templates/product-add.html
+++ b/src/main/resources/templates/product-add.html
@@ -76,7 +76,36 @@
       </form>
     </div>
 
+    <script>
+      function submitForm() {
+        const form = document.getElementById('productForm');
+        const formData = new FormData(form);
+        const jsonObject = {};
 
+        formData.forEach((value, key) => {
+          jsonObject[key] = value;
+        });
+
+        fetch('/product', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify(jsonObject)
+        })
+        .then(response => {
+          if (response.ok) {
+            alert("상품이 추가되었습니다.");
+            window.location.href = "/admin/product-management";
+          } else {
+            return response.text().then(text => {
+              throw new Error(text)
+            });
+          }
+        }).catch(error => alert('Error: ' + error.message))
+
+      }
+    </script>
 
   </div>
 </div>
