--- a/src/main/resources/templates/product-manage.html
+++ b/src/main/resources/templates/product-manage.html
@@ -126,7 +126,53 @@
 
   }
 
+  function editHandler(productId) {
+    const form = document.getElementById(`edit-form-${productId}`);
+    const id = form.querySelector('input[name="id"]').value;
+    const name = form.querySelector('input[name="name"]').value;
+    const price = form.querySelector('input[name="price"]').value;
+    const imageUrl = form.querySelector('input[name="imageUrl"]').value;
 
+    const product={
+      id:id,
+      name:name,
+      price:price,
+      imageUrl:imageUrl
+    };
+
+    fetch(`/product/edit/${productId}`, {
+      method: 'PATCH',
+      headers:{
+        'Content-Type':'application/json'
+      },
+      body: JSON.stringify(product)
+    })
+    .then(response => {
+      if (response.ok) {
+        alert("상품이 수정되었습니다.");
+        window.location.reload();
+      } else {
+        return response.text().then(text => { throw new Error(text) });
+      }
+    })
+    .catch(error => alert('Error: ' + error.message));
+
+  }
+
+  //editForm
+  function showEditForm(id) {
+    var editForm = document.getElementById('edit-form-' + id);
+    if (editForm) {
+      editForm.style.display = 'block';
+    }
+  }
+
+  function hideEditForm(id) {
+    var editForm = document.getElementById('edit-form-' + id);
+    if (editForm) {
+      editForm.style.display = 'none';
+    }
+  }
 
 </script>
 </body>
