--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <link href="../css/bootstrap.min.css"
+        th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+  <style>
+    th {
+      text-align: center;
+    }
+    td {
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
+<div class="container" style="max-width: 600px">
+  <div class="py-5 text-center">
+    <h2>상품 목록</h2>
+  </div>
 
+  <div class="row">
+    <div class="col">
+      <button class="btn btn-primary float-end"
+              onclick="location.href='addForm.html'"
+              th:onclick="|location.href='@{/step2/products/add}'|" type="button">상품 등록</button>
+    </div>
+  </div>
+
+  <hr class="my-4">
+  <div>
+    <table class="table">
+      <thead>
+      <tr>
+        <th>ID</th>
+        <th>상품명</th>
+        <th>가격</th>
+        <th>이미지-URL</th>
+        <th>옵션</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="product : ${products}">
+        <td th:text="${product.id}">상품 ID</td>
+        <td th:text="${product.name}">상품명</td>
+        <td th:text="${product.price}">0원</td>
+        <td th:text="${product.imageUrl}">link</td>
+        <td>
+          <button class="btn btn-secondary"
+                  onclick="location.href='editForm.html'"
+                  th:onclick="|location.href='@{/step2/products/{id}/edit(id=${product.id})}'|" type="button">수정</button>
+          <button class="btn btn-danger"
+                  onclick="location.href='products.html'"
+                  th:onclick="|location.href='@{/step2/products/delete(id=${product.id})}'|" type="button">삭제</button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 </body>
 </html>
