jdbc통해 데이터 관리 하도록 변경

--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -22,7 +22,7 @@
         <td th:text="${product.name}"></td>
         <td th:text="${product.price}"></td>
         <td th:text="${product.imageUrl}"></td>
-        <td th:text="${product.options}"></td>
+        <td th:text="${product.option}"></td>
     </tr>
     </tbody>
 </table>
