--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,36 +2,44 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Manager Screen</title>
+    <title>Product Manager</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container mt-5">
-    <h1 class="mb-4">Manage Products</h1>
-
-    <form th:action="@{/products/new}" method="get" class="mb-3">
-        <button type="submit" class="btn btn-primary">Add Product</button>
-    </form>
+    <div class="row">
+        <div class="col">
+            <h1 class="mb-4">Product Manager</h1>
+        </div>
+        <div class="col text-right align-self-center">
+            <form th:action="@{/products/new}" method="get" class="d-inline">
+                <button type="submit" class="btn btn-primary">Add Product</button>
+            </form>
+            <button id="delete-selected" class="btn btn-danger d-inline">Delete Selected</button>
+        </div>
+    </div>
 
     <table class="table table-bordered">
         <thead class="thead-light">
         <tr>
+            <th><input type="checkbox" id="select-all"></th>
             <th>Name</th>
             <th>Price</th>
-            <th>Image URL</th>
+            <th>Image</th>
             <th>Actions</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="productDto : ${productDtos}">
-            <td th:text="${productDto.name}"></td>
-            <td th:text="${productDto.price}"></td>
-            <td th:text="${productDto.imageUrl}"></td>
+        <tr th:each="product : ${products}">
+            <td><input type="checkbox" class="product-checkbox" th:value="${product.id}"></td>
+            <td th:text="${product.name}"></td>
+            <td th:text="${product.price}"></td>
+            <td th:text="${product.imageUrl}"></td>
             <td>
-                <form th:action="@{/products/{id}/edit(id=${productDto.id})}" method="get" class="d-inline">
+                <form th:action="@{/products/{id}/edit(id=${product.id})}" method="get" class="d-inline">
                     <button type="submit" class="btn btn-warning btn-sm">Edit</button>
                 </form>
-                <form th:action="@{/products/{id}/delete(id=${productDto.id})}" method="post" class="d-inline">
+                <form th:action="@{/products/{id}/delete(id=${product.id})}" method="post" class="d-inline">
                     <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                 </form>
             </td>
@@ -43,5 +51,42 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<script>
+    document.getElementById('select-all').onclick = function() {
+        var checkboxes = document.getElementsByClassName('product-checkbox');
+        for (var checkbox of checkboxes) {
+            checkbox.checked = this.checked;
+        }
+    }
+
+    document.getElementById('delete-selected').onclick = function() {
+        var selected = [];
+        var checkboxes = document.getElementsByClassName('product-checkbox');
+        for (var checkbox of checkboxes) {
+            if (checkbox.checked) {
+                selected.push(checkbox.value);
+            }
+        }
+
+        if (selected.length > 0) {
+            fetch('/products/delete-batch', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ids: selected}),
+            }).then(response => {
+                if (response.ok) {
+                    window.location.reload();
+                } else {
+                    alert('Failed to delete products');
+                }
+            });
+        } else {
+            alert('No products selected');
+        }
+    }
+</script>
 </body>
 </html>
