--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -12,10 +12,6 @@ a {
     color: #191919;
 }
 
-a:hover {
-    text-decoration: underline;
-}
-
 .top-bar {
     display: flex;
     justify-content: flex-end;
@@ -28,6 +24,11 @@ a:hover {
     background-color: #FEE500;
     border: 1px solid #FEE500;
     border-radius: 5px;
+}
+
+.add-product-link:hover {
+    background-color: #FFD100;
+    border: 1px solid #FFD100;
 }
 
 .table-container {
@@ -53,4 +54,52 @@ th {
 img {
     display: block;
     margin: auto;
+}
+
+.product-form {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.form-group input {
+    width: calc(100% - 22px);
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.form-actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #191919;
+    background-color: #FEE500;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #FFD100;
 }
