refactor : requestParam 대신에 modelAttribute로 수정하여 객체를 받아오게 수정

--- a/src/main/resources/templates/create_form.html
+++ b/src/main/resources/templates/create_form.html
@@ -14,11 +14,11 @@
         </div>
         <div class="mb-3">
             <label for="price" class="form-label">가격</label>
-            <textarea name="price" id="price" class="form-control" ></textarea>
+            <input name="price" id="price" class="form-control" ></input>
         </div>
         <div class="mb-3">
             <label for="imageUrl" class="form-label">이미지Url</label>
-            <textarea name="imageUrl" id="imageUrl" class="form-control"></textarea>
+            <input name="imageUrl" id="imageUrl" class="form-control"></input>
         </div>
         <input type="submit" value="저장하기" class="btn btn-primary my-2">
     </form>
