--- a/src/main/resources/templates/modify_form.html
+++ b/src/main/resources/templates/modify_form.html
@@ -20,7 +20,7 @@
         </div>
         <div class="mb-3">
             <label for="imageUrl" class="form-label">이미지Url</label>
-            <textarea name="imageUrl" id="imageUrl" class="form-control"></textarea>
+            <input name="imageUrl" id="imageUrl" class="form-control"></input>
         </div>
         <input type="submit" value="수정하기" class="btn btn-primary my-2">
     </form>
