--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,6 +24,7 @@
         <td><img th:src="${product.imageUrl}" alt="상품 이미지" width="100"></td>
         <td>
             <button onclick="editProduct(${product.id})">수정</button>
+            <button onclick="deleteProduct(${product.id})">삭제</button>
         </td>
     </tr>
     </tbody>
@@ -70,6 +71,7 @@
                         <td><img src="${product.imageUrl}" alt="상품 이미지" width="100"></td>
                         <td>
                             <button onclick="editProduct(${product.id})">수정</button>
+                            <button onclick="deleteProduct(${product.id})">삭제</button>
                         </td>
                     </tr>
                 `);
@@ -122,6 +124,17 @@
                 fetchProducts();
                 resetEditProductForm();
                 $("#edit-product-form").hide();   // 성공 시 숨기기
+            }
+        });
+    }
+
+    // 상품 삭제
+    function deleteProduct(id) {
+        $.ajax({
+            url: `/api/products/${id}`,
+            type: "DELETE",
+            success: function() {
+                fetchProducts();
             }
         });
     }
