docs: step3 요구사항정리

--- a/src/main/resources/templates/version-SSR/add-form.html
+++ b/src/main/resources/templates/version-SSR/add-form.html
@@ -17,7 +17,7 @@
         <input type="text" id="price" th:field="*{price}" required/><br/>
         <label for="imageUrl">Image URL:</label>
         <input type="text" id="imageUrl" th:field="*{imageUrl}" required/><br/>
-        <button type="submit">상품 추가</button>
+        <button type="submit">추가</button>
     </form>
 
 </body>
