--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -28,7 +28,10 @@
             <td th:text="${product.price}"></td>
             <td><img th:src="${product.imageUrl}" alt="product image" width="100"></td>
             <td>
-                <a th:href="@{/api/products/{id}/edit(id=${product.id})}">Edit</a>
+                <div class="action-cell">
+                    <a th:href="@{/api/products/{id}/edit(id=${product.id})}" class="action-link">✏️</a>
+                    <a th:href="@{/api/products/{id}(id=${product.id})}" class="action-link">❌</a>
+                </div>
             </td>
         </tr>
         </tbody>
