--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -10,7 +10,7 @@
   <h1>Manage <strong>Products</strong></h1>
   <div class="button-group">
     <button class="btn btn-danger"><i class="fa-solid fa-circle-minus"></i>Delete</button>
-    <button class="btn btn-success"><i class="fa-solid fa-circle-plus"></i>Add New Product</button>
+    <a href="/products/new"><button class="btn btn-success"><i class="fa-solid fa-circle-plus"></i>Add New Product</button></a>
   </div>
   <div class="products">
     <table class="table">
