--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -33,7 +33,7 @@
         <td><a th:href="@{'/products/' + ${product.id}}" th:text="${product.name}"></a></td>
         <td><a th:href="@{'/products/' + ${product.id}}" th:text="${product.price}"></a></td>
         <td>
-          <button class="icon-btn"><i class="fa-solid fa-pen"></i></button>
+          <a th:href="@{'/products/edit/' + ${product.id}}"><button class="icon-btn"><i class="fa-solid fa-pen"></i></button></a>
           <button class="icon-btn"><i class="fa-solid fa-trash-can"></i></button>
         </td>
       </tr>
