feat: 관리자페이지 상품 입력 기능 구현

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
 </head>
 <body>
-<div class="title">
-    <h1>Manage Products</h1>
-    <button>Add New Product</button>
-</div>
 <div class="container">
+    <div class="title">
+        <h1>Manage Products</h1>
+        <button><a th:href="@{/admin/product/new}">Add New Product</a></button>
+    </div>
+
     <table class="table">
         <thead>
         <tr>
