--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,11 +1,10 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 80%;
+    margin: 0 auto;
 }
 
 .table {
-    width: 80%;
+    width: 100%;
     border-collapse: collapse;
 }
 
