refactor: Edit 버튼 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,6 +25,7 @@
                 <td th:text="${product.price}">Price</td>
                 <td th:text="${product.imgUrl}">Image URL</td>
                 <td>
+                    <a th:href="@{/showUpdateProducts/{id}(id=${product.id})}">Edit</a>
                     <a th:href="@{/api/products/delete/{id}(id=${product.id})}">Delete</a>
                 </td>
             </tr>
